[gd_scene load_steps=8 format=3 uid="uid://ds5vmix6ppbug"]

[ext_resource type="Script" path="res://scripts/cleave_angel.gd" id="1_p1ldb"]
[ext_resource type="Texture2D" uid="uid://drxkqtffdunin" path="res://sprites/p12s_angels.png" id="2_gaexk"]
[ext_resource type="Texture2D" uid="uid://byommxpuvrwf0" path="res://sprites/p12s_redcrystal.png" id="3_rok44"]
[ext_resource type="Shader" path="res://shaders/tether_angel.gdshader" id="4_4v57j"]
[ext_resource type="Texture2D" uid="uid://ddmtegjyd1qh5" path="res://sprites/laser_red.png" id="5_ej3q8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywoay"]
size = Vector2(128, 600)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jcdwk"]
shader = ExtResource("4_4v57j")
shader_parameter/time_factor = 1.5
shader_parameter/repetitions = 4.0

[node name="CleaveAngel" type="Node2D"]
script = ExtResource("1_p1ldb")
angel_sprite = ExtResource("2_gaexk")
speed = 600.0

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 13
texture_filter = 1
texture = ExtResource("3_rok44")

[node name="LaserArea" type="Area2D" parent="." groups=["BigLaser"]]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserArea"]
position = Vector2(0, 309)
shape = SubResource("RectangleShape2D_ywoay")

[node name="LaserSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 11
texture_filter = 1
material = SubResource("ShaderMaterial_jcdwk")
position = Vector2(0, 1200)
scale = Vector2(1e-05, 37.5)
texture = ExtResource("5_ej3q8")
